--- a/Views/components/header.html
+++ b/Views/components/header.html
@@ -21,6 +21,9 @@
           <li class="nav-item">
             <a class="nav-link" data="contact"><i class="fas fa-envelope"></i> Contact</a>
           </li>
+          <li class="nav-item" id="task-list">
+            <a class="nav-link" data="task-list"><i class="fas fa-tasks"></i> Task-List</a>
+          </li>
           <li class="nav-item" id="login">
             <a class="nav-link" data="login"><i class="fas fa-sign-in-alt"></i> Login</a>
           </li>
