--- a/Views/components/header.html
+++ b/Views/components/header.html
@@ -22,7 +22,7 @@
             <a class="nav-link" data="contact"><i class="fas fa-envelope"></i> Contact</a>
           </li>
           <li class="nav-item" id="task-list">
-            <a class="nav-link" data="task-list"><i class="fas fa-tasks"></i> Task-List</a>
+            <a class="nav-link" data="task-list"><i class="fas fa-tasks"></i> Task-list</a>
           </li>
           <li class="nav-item" id="login">
             <a class="nav-link" data="login"><i class="fas fa-sign-in-alt"></i> Login</a>
